hasqd/tests/coptest/simple/db/negative/005.inp
# add on wrong name

create _md5 md5 MD5 1 [abc] 1 0
load
addpwd a_md5 0 dn password
erasedisk
